# Flight-Simulator-Part1

./: CMakeLists.txt  Client.cpp  Client.h  Command.h  InitializeCommands.cpp  InitializeCommands.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Server.cpp  Server.h  SymbolTable.cpp  SymbolTable.h  Var.cpp  Var.h  baseInclude.h  fly.txt  fly_with_func.txt  main.cpp  makefile  sources.txt
Commands/: Command.cpp  Command.h  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  DefineVarCommand.cpp  DefineVarCommand.h  IfCommand.cpp  IfCommand.h  LoopCommand.cpp  LoopCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  PrintCommand.cpp  PrintCommand.h  SleepCommand.cpp  SleepCommand.h  UseVarCommand.cpp  UseVarCommand.h
Interpreter/: BinaryOperator.cpp  BinaryOperator.h  Div.cpp  Div.h  Expression.h  Interpreter.cpp  Interpreter.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Plus.cpp  Plus.h  UMinus.cpp  UMinus.h  UPlus.cpp  UPlus.h  UnaryOperator.cpp  UnaryOperator.h  Value.cpp  Value.h  Variable.cpp  Variable.h  ex1.cpp  ex1.h
Provided Files/: generic_small.xml
